[package]
name = "storm"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
enum-map = "2.7.3"
oneshot = "0.1.11"
smallvec = "1.14.0"
unicode-ident = "1.0.18"

[target.'cfg(windows)'.dependencies]
parking_lot = "0.12.3"
widestring = "1.1.0"
winapi = { version = "0.3.9", features = ["errhandlingapi", "std", "winbase", "winuser"] }

[dev-dependencies]
criterion = "0.5.1"
fastrand = "2.3.0"
