[package]
name = "storm"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
enum-map = "2.7.3"
oneshot = "0.1.11"
phf = { version = "0.11.3", features = ["macros"] }
smallvec = "1.14.0"
strum = { version = "0.26.3", default-features = false, features = ["derive"] }

[target.'cfg(windows)'.dependencies]
parking_lot = "0.12.3"
widestring = "1.1.0"
winapi = { version = "0.3.9", features = ["errhandlingapi", "std", "winbase", "winuser"] }

[dev-dependencies]
itertools = "0.13.0"
